Error.txt
error: non-static variable HelloMsg cannot be referenced from a static context

error: non-static variable SetHelloMsg cannot be referenced from a static context

error: constructor BigSib in class BigSib cannot be applied to given types;

test.java:4: error: constructor BankAccount in class BankAccount cannot be applied to given types;
    BankAccount olu = new BankAccount(12);
                      ^
  required: no arguments
  found: int
  reason: actual and formal argument lists differ in length

